--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   oktoast: ^3.0.0
   # MMKV 一个更高效存储简单数据的库 https://pub.dev/packages/flummkv
   # flummkv: ^1.0.27
+  #https://pub.dev/packages/octo_image/install
+  octo_image: ^1.0.0+1
+  #https://pub.dev/packages/cached_network_image/install
+  cached_network_image: ^3.0.0
   flutter:
     sdk: flutter
 
@@ -56,9 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
