--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   #https://pub.flutter-io.cn/packages/flutter_easyrefresh/install
   flutter_easyrefresh: ^2.2.1
   statsfl: ^2.0.1-nullsafety
+  decimal: 1.5.0
   flutter:
     sdk: flutter
 
